--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="app-container">
+<div id="app-container" *ngIf="supported">
 
   <!-- <app-menu></app-menu> -->
  <!--  <button id="setting" mat-button color="secondary" 
