--- a/src/app/ui-components/console/console.component.html
+++ b/src/app/ui-components/console/console.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<button (click)="clearConsole()">Clear Console</button>
 	<div class="message-container" *ngFor="let msg of _messages;">
-		<span class="time">{{msg.time}}</span>
+		<span class="time">{{msg.time | date:'mediumTime'}}</span>
 		<span class="message">{{msg.message}}</span>
 	</div>
 </div>
