--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -8,7 +8,7 @@
 
 		<mat-list condensed>
 			<mat-list-item class="fn_name" *ngFor="let type of procedureTypes"
-								 		(click)="addProcedure($event, type)">{{getImageForType(type)}}</mat-list-item>
+								 		(click)="addProcedure($event, type)">{{getStringForProcedureType(type)}}</mat-list-item>
 		</mat-list>
 
 		<hr/>
