--- a/src/scss/_viewers.scss
+++ b/src/scss/_viewers.scss
@@ -1,5 +1,24 @@
 .viewer{
 	
+	.container{
+		display: flex; 
+		flex-direction: row; 
+		height: 100%;
+
+		.sidebar{
+			width: 250px; 
+			border-right: 4px solid #A9BCEC; //todo: change
+		}
+
+		.view-container{
+			box-sizing: border-box;
+			height: 100%;
+			width: 100%;
+			padding-bottom: $header-height;
+			overflow: auto;
+		}
+	}
+
 /* 	width: 100%; 
 overflow: auto;
 
