build with updates

--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -13,7 +13,7 @@
 
 		<hr/>
 
-		<mat-accordion multi="true" [displayMode]="flat">
+		<mat-accordion multi="true">
 
 				<!-- inputs -->
 				<mat-expansion-panel [expanded]="true" *ngFor="let cat of _category">
