--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -15,127 +15,133 @@
 
 						<button id="expand" style="display: none;" (click)="tree.treeModel.expandAll()">Ex</button>   
 
-						<tree-root #tree [nodes]='_treeNodes' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
-						  <ng-template #treeNodeTemplate let-prod let-index="index" class="tree-node-wrapper">
-						  		<div class = "full-container" (click)="focus($event, prod)">
+						<tree-root #tree 	
+									[nodes]='_procedureArr' 
+									[options]='_tree_options'  
+									(moveNode)="onMoveNode($event)">
+								  <ng-template #treeNodeTemplate 
+								  		let-prod 
+								  		let-index="index" 
+								  		class="tree-node-wrapper">
+								  		<div class = "full-container" (click)="focus($event, prod)">
 
-									<div class = "seg3" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
-			    					   	<button mat-button 
-										    *ngIf="prod.data.getType() =='Action'"
-											(click)="openHelp($event, prod)">
-											<mat-icon>help_outline</mat-icon>
-										</button>
+											<div class = "seg3" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
+					    					   	<button mat-button 
+												    *ngIf="prod.data.getType() =='Action'"
+													(click)="openHelp($event, prod)">
+													<mat-icon>help_outline</mat-icon>
+												</button>
 
-				    				</div>
-						  			<div class = "seg1" 
-						  				[class.error]="prod.data.hasError" 
-						  				[class.print]="prod.data.printToConsole()"
-						  				[class.disabled]="prod.data.isDisabled()">
+						    				</div>
+								  			<div class = "seg1" 
+								  				[class.error]="prod.data.hasError" 
+								  				[class.print]="prod.data.printToConsole()"
+								  				[class.disabled]="prod.data.isDisabled()">
 
-										<!-- template for data -->
-										<div *ngIf="prod.data.getType() == 'Data'"> 
-											<div class='procedure-item'>
-												<input matInput class="tree-input" 
-												[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'left')">
+												<!-- template for data -->
+												<div *ngIf="prod.data.getType() == 'Data'"> 
+													<div class='procedure-item'>
+														<input matInput class="tree-input" 
+														[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'left')">
 
-												<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'left')"> -->
-												<span class="equal">=</span>
-									
-												<input matInput class="tree-input" 
-												[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'right')">
+														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'left')"> -->
+														<span class="equal">=</span>
+											
+														<input matInput class="tree-input" 
+														[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'right')">
 
-												<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'right')"> -->
+														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'right')"> -->
+													</div>
+												</div>
+
+												<div *ngIf="prod.data.getType() == 'IfElse'">
+													<div class='procedure-item'>
+														<span>if-else</span>
+													</div>
+												</div>
+
+												<div *ngIf="prod.data.getType() == 'If'">
+													<div class='procedure-item'>
+													 <span>if</span> ( <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'left')"> )
+													</div>
+												</div>
+
+												<div *ngIf="prod.data.getType() == 'Else'">
+													<div class='procedure-item'>
+													 <span>else</span>
+													</div>
+												</div>
+
+												<div *ngIf="prod.data.getType() == 'For Loop'">
+													<div class='procedure-item'>
+													 <span>for (</span> 
+													  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
+													 <span>in</span>  
+													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
+													  )
+													</div>
+												</div>
+
+												<div *ngIf="prod.data.getType() == 'Action'">
+													<div class='procedure-item'>
+														<input matInput class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+														(change)="updateProcedure($event, prod, 'left')">
+														
+
+														<span class="equal">=</span>
+
+														<span class="module">{{prod.data.getRightComponent().module}}</span>
+														.
+
+														  <span class="function">{{prod.data.getRightComponent().fn_name}}</span> 
+
+														( <span *ngIf="prod.data.getRightComponent().params.length>0">
+																<div class="param-container" 														*ngFor="let p of prod.data.getRightComponent().params; let i=index">
+																	
+																	<input matInput class="tree-input" 
+																	 [(ngModel)]="prod.data.getRightComponent().params[i].value"
+																	 #ctrl="ngModel" 
+																	 required
+																	 (change)="updateProcedure($event, prod, 'right')">
+
+																	<span *ngIf='i<prod.data.getRightComponent().params.length-1'>,</span>
+																	<!-- <input width=50 class="tree-input" [(ngModel)]="p" 
+																	 placeholder="Input something here" 
+																	 #ctrl="ngModel" required 
+																	 (change)="updateProcedure($event, prod, 'right')"> --> 
+																</div> 
+															</span>	)
+														
+													</div>
+												</div>
 											</div>
-										</div>
 
-										<div *ngIf="prod.data.getType() == 'IfElse'">
-											<div class='procedure-item'>
-												<span>if-else</span>
+											<div class = "divider">
 											</div>
-										</div>
 
-										<div *ngIf="prod.data.getType() == 'If'">
-											<div class='procedure-item'>
-											 <span>if</span> ( <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'left')"> )
-											</div>
-										</div>
-
-										<div *ngIf="prod.data.getType() == 'Else'">
-											<div class='procedure-item'>
-											 <span>else</span>
-											</div>
-										</div>
-
-										<div *ngIf="prod.data.getType() == 'For Loop'">
-											<div class='procedure-item'>
-											 <span>for (</span> 
-											  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
-											 <span>in</span>  
-											  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
-											  )
-											</div>
-										</div>
-
-										<div *ngIf="prod.data.getType() == 'Action'">
-											<div class='procedure-item'>
-												<input matInput class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-												(change)="updateProcedure($event, prod, 'left')">
-												
-
-												<span class="equal">=</span>
-
-												<span class="module">{{prod.data.getRightComponent().module}}</span>
-												.
-
-												  <span class="function">{{prod.data.getRightComponent().fn_name}}</span> 
-
-												( <span *ngIf="prod.data.getRightComponent().params.length>0">
-														<div class="param-container" 														*ngFor="let p of prod.data.getRightComponent().params; let i=index">
-															
-															<input matInput class="tree-input" 
-															 [(ngModel)]="prod.data.getRightComponent().params[i].value"
-															 #ctrl="ngModel" 
-															 required
-															 (change)="updateProcedure($event, prod, 'right')">
-
-															<span *ngIf='i<prod.data.getRightComponent().params.length-1'>,</span>
-															<!-- <input width=50 class="tree-input" [(ngModel)]="p" 
-															 placeholder="Input something here" 
-															 #ctrl="ngModel" required 
-															 (change)="updateProcedure($event, prod, 'right')"> --> 
-														</div> 
-													</span>	)
-												
-											</div>
-										</div>
-									</div>
-
-									<div class = "divider">
-									</div>
-
-									<div class = "seg2" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
-									   <button mat-button
-									   		(click)="togglePrint(prod.data)" 
-									   		matTooltip="Print value to console"
-									   		*ngIf="prod.data.getType() =='Action' || prod.data.getType() =='Data'">
-		    					    		<mat-icon>print</mat-icon>
-			    					    </button>
-										 <button mat-button (click)="toggle(prod.data)" matTooltip="Enable/Disable Line">
-		    					    		<mat-icon>check_circle</mat-icon>
-			    					    </button>
-								        <button mat-button (click)="deleteProcedure(prod)" matTooltip="Delete Line">
-		    					    		<mat-icon>delete</mat-icon>
-			    					    </button>
-			    					    <!-- <button (click)="disableProcedure(prod, $event)">Disable</button>
-			    					    <button (click)="go($event)">Copy</button> -->
-				    				</div>
-				    			</div>
-						  </ng-template>
+											<div class = "seg2" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
+											   <button mat-button
+											   		(click)="togglePrint(prod.data)" 
+											   		matTooltip="Print value to console"
+											   		*ngIf="prod.data.getType() =='Action' || prod.data.getType() =='Data'">
+				    					    		<mat-icon>print</mat-icon>
+					    					    </button>
+												 <button mat-button (click)="toggle(prod.data)" matTooltip="Enable/Disable Line">
+				    					    		<mat-icon>check_circle</mat-icon>
+					    					    </button>
+										        <button mat-button (click)="deleteProcedure(prod)" matTooltip="Delete Line">
+				    					    		<mat-icon>delete</mat-icon>
+					    					    </button>
+					    					    <!-- <button (click)="disableProcedure(prod, $event)">Disable</button>
+					    					    <button (click)="go($event)">Copy</button> -->
+						    				</div>
+						    			</div>
+								  </ng-template>
 						</tree-root> 
 						
 					</div>
