--- a/src/app/ui-components/console/console.component.html
+++ b/src/app/ui-components/console/console.component.html
@@ -1,8 +1,12 @@
 <div class="container">
-	<button (click)="clearConsole()">Clear Console</button>
-	<div class="message-container" *ngFor="let msg of _messages;">
-		<span class="time">{{msg.time | date:'mediumTime'}}</span>
-		<span class="message">{{msg.message}}</span>
+	<div class="btn-container">
+		<button mat-button (click)="clearConsole()"><i class="fa fa-eraser"></i></button>
+	</div>
+	<div class = "console-log">
+		<div class="message-container" *ngFor="let msg of _messages;">
+			<span class="time">{{msg.time | date:'mediumTime'}}</span>
+			<span class="message">{{msg.message}}</span>
+		</div>
 	</div>
 </div>
 
