procedure improved; shake node and disconnect added

--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -110,7 +110,7 @@
 							(click)="clickNode($event, node_index)"
 							draggable=true  
 							(dragstart)="nodeDragStart($event, node)" 
-							(drag)="nodeDragging($event, node)" 
+							(drag)="nodeDragging($event, node, node_index)" 
 							(dragend)="nodeDragEnd($event, node)">
 							
 							<div class="node-name" 
