bug fixes for file saving

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
 
       <split  direction="horizontal" 
+              gutterColor="#8AA8C0"
               [gutterSize]="layout.gutter" 
               [useTransition]="layout.useTransition">
 
