--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -13,7 +13,7 @@
 	    	</mat-expansion-panel-header>
 
 			<mat-list style="max-height: 500px; overflow: auto;">
-				<h3 mat-subheader>{{m.comment.shortText}}</h3>
+				<!-- <h3 mat-subheader>{{m.comment.shortText}}</h3> -->
 
 				<h3 mat-subheader>Functions</h3>
 			 	<mat-list-item *ngFor="let fn of m.children">
