--- a/src/scss/_viewers.scss
+++ b/src/scss/_viewers.scss
@@ -6,9 +6,9 @@
 		height: 100%;
 
 		.sidebar{
-			width: 250px; 
-			border-right: 4px solid #A9BCEC; //todo: change
-			z-index: 100;
+			//width: 250px; 
+			//border-right: 4px solid #A9BCEC; //todo: change
+			//z-index: 100;
 		}
 
 		.view-container{
