--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -18,6 +18,7 @@
 					<mat-expansion-panel-header>
 						<mat-panel-title>
 						  {{ cat }} 
+						  <mat-icon style="font-size: 14px; margin-left: 5px;" (click)="openModuleHelp($event, cat)">help_outline</mat-icon>
 						</mat-panel-title>
 						<mat-panel-description>
 						  <!-- This is a summary of the content -->
